src/np222kk/dv507/a2/test/cases/negative/test_binoperator_03.ofp
void main() {
    bool b = true * 1.0;
}